objects/iahelp__HelpInteraction__c.object
<CustomObject>
    <description>An Interaction - Helped User navigation and feedback - with an Improved Help Entity or feature</description>
    <fields>
        <fullName>iahelp__Context__c</fullName>
        <description>The Improved Help Context (typically a URL) in use at the time the interaction was logged</description>
        <inlineHelpText>The Improved Help Context (typically a URL) in use at the time the interaction was logged</inlineHelpText>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__CreatedById__c</fullName>
        <formula>CreatedBy.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula returning Created Date AND TIME for Interaction reports</inlineHelpText>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>iahelp__Description__c</fullName>
        <description>Comments / feedback requesting new Help content, ideas for improvement or other remarks</description>
        <inlineHelpText>Please provide any new Help content request, ideas for improvement or other comments</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpInteractionType__c</fullName>
        <description>The type of activity that generated this Help Interaction record</description>
        <inlineHelpText>The type of activity that generated this Help Interaction record</inlineHelpText>
        <label>Help Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Callout</fullName>
                    <color>#F3D904</color>
                    <default>true</default>
                    <label>Callout</label>
                </value>
                <value>
                    <fullName>Comment</fullName>
                    <color>#F96FB7</color>
                    <label>Comment</label>
                </value>
                <value>
                    <fullName>Display Density</fullName>
                </value>
                <value>
                    <fullName>Form Section Toggle</fullName>
                </value>
                <value>
                    <fullName>Full Topic</fullName>
                    <color>#3366FF</color>
                    <label>Full Topic</label>
                </value>
                <value>
                    <fullName>Issue</fullName>
                    <color>#A845DC</color>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>List Detail Level</fullName>
                </value>
                <value>
                    <fullName>LUX List Type</fullName>
                </value>
                <value>
                    <fullName>Nudge Displayed</fullName>
                </value>
                <value>
                    <fullName>Personal Field Selection</fullName>
                </value>
                <value>
                    <fullName>Personal Form Visibility</fullName>
                </value>
                <value>
                    <fullName>Position Detector Context Log</fullName>
                </value>
                <value>
                    <fullName>QAM Drag</fullName>
                </value>
                <value>
                    <fullName>Reading List Entry</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                    <color>#FF9900</color>
                    <label>Resource</label>
                </value>
                <value>
                    <fullName>Search</fullName>
                    <color>#33FFFF</color>
                    <label>Search</label>
                </value>
                <value>
                    <fullName>Sticky</fullName>
                </value>
                <value>
                    <fullName>Sticky (Archived)</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                    <color>#BBBBBB</color>
                    <label>System</label>
                </value>
                <value>
                    <fullName>Tree Node</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iahelp__HelpReadingListId__c</fullName>
        <formula>iahelp__HelpReadingList__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Reading List Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpReadingListSummary__c</fullName>
        <formula>iahelp__HelpReadingList__r.iahelp__Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Reading List Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpReadingList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Reading List (or Guide) involved in this interaction</description>
        <inlineHelpText>The Reading List (or Guide) involved in this interaction</inlineHelpText>
        <label>Help Reading List</label>
        <referenceTo>iahelp__HelpReadingList__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>Help_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpResourceId__c</fullName>
        <formula>iahelp__HelpResource__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Resource Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpResourceLocation__c</fullName>
        <formula>iahelp__HelpResource__r.iahelp__Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Resource Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpResourceUrl__c</fullName>
        <formula>iahelp__HelpResource__r.iahelp__ResourceURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Resource Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Help Resource accessed during this Help Interaction</inlineHelpText>
        <label>Help Resource</label>
        <referenceTo>iahelp__HelpResource__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>HelpInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpTopicId__c</fullName>
        <formula>iahelp__HelpTopic__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Topic Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpTopicSummary__c</fullName>
        <formula>iahelp__HelpTopic__r.iahelp__Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Topic Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Help Topic accessed in this Help Interaction</inlineHelpText>
        <label>Help Topic</label>
        <referenceTo>iahelp__HelpTopic__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>HelpInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteOptionCategory__c</fullName>
        <description>Formula denormalising the Category from any Help Vote Option selected in this Interaction</description>
        <formula>TEXT( iahelp__HelpVoteOption__r.iahelp__Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Vote Option Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteOptionId__c</fullName>
        <formula>iahelp__HelpVoteOption__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Vote Option Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Vote that was cast as part of this interaction</description>
        <inlineHelpText>The Vote that was cast as part of this interaction</inlineHelpText>
        <label>Help Vote Option</label>
        <referenceTo>iahelp__HelpVoteOption__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>HelpInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteSetId__c</fullName>
        <formula>iahelp__HelpVoteOption__r.iahelp__HelpVoteSet__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Vote Set Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteSetName__c</fullName>
        <formula>iahelp__HelpVoteOption__r.iahelp__HelpVoteSet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Vote Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpVoteSetQuestionText__c</fullName>
        <formula>iahelp__HelpVoteOption__r.iahelp__HelpVoteSet__r.iahelp__QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Vote Set Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedElementId__c</fullName>
        <formula>iahelp__HelpedElement__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helped Element Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedElementIdentifier__c</fullName>
        <formula>iahelp__HelpedElement__r.iahelp__Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helped Element Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Helped Element involved with this Help Interaction</inlineHelpText>
        <label>Helped Element</label>
        <referenceTo>iahelp__HelpedElement__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>HelpInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedPageLayoutId__c</fullName>
        <formula>iahelp__HelpedPageLayout__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helped Page Layout Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedPageLayoutIdentifier__c</fullName>
        <formula>iahelp__HelpedPageLayout__r.iahelp__PageLayoutIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Helped Page Layout Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__HelpedPageLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Page Layout within which this Help Interaction took place</inlineHelpText>
        <label>Helped Page Layout</label>
        <referenceTo>iahelp__HelpedPageLayout__c</referenceTo>
        <relationshipLabel>Help Interactions</relationshipLabel>
        <relationshipName>HelpInteractions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Help Interaction</label>
    <listViews>
        <fullName>iahelp__All_Interactions</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpedElement__c</columns>
        <columns>iahelp__HelpedPageLayout__c</columns>
        <columns>iahelp__HelpReadingList__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>iahelp__HelpVoteOption__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Interactions</label>
    </listViews>
    <listViews>
        <fullName>iahelp__LUX_List_Type_Interactions</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>LUX List Type</value>
        </filters>
        <label>LUX List Type Interactions</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Last_Week_s_Interactions</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpedElement__c</columns>
        <columns>iahelp__HelpedPageLayout__c</columns>
        <columns>iahelp__HelpReadingList__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>iahelp__HelpVoteOption__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week&apos;s Interactions</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Nudges</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Nudge Displayed</value>
        </filters>
        <label>Nudges</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Position_Detector_Context_Logs</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpedElement__c</columns>
        <columns>iahelp__HelpedPageLayout__c</columns>
        <columns>iahelp__HelpReadingList__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>iahelp__HelpVoteOption__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Position Detector Context Log</value>
        </filters>
        <label>Position Detector Context Logs</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Resource_Views</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpTopicId__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>iahelp__HelpResourceId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filters>
        <label>Resource Views</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Searches</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__CreatedDateTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Search</value>
        </filters>
        <label>Searches</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Stickies_Help_Notes</fullName>
        <columns>NAME</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__CreatedDateTime__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpedPageLayout__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Sticky</value>
        </filters>
        <label>Stickies (Help Notes)</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Today_s_interations</fullName>
        <columns>NAME</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__Context__c</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpedElement__c</columns>
        <columns>iahelp__HelpedPageLayout__c</columns>
        <columns>iahelp__HelpReadingList__c</columns>
        <columns>iahelp__HelpResource__c</columns>
        <columns>iahelp__HelpVoteOption__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s interactions</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Votes</fullName>
        <columns>NAME</columns>
        <columns>iahelp__Context__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>iahelp__Description__c</columns>
        <columns>iahelp__HelpInteractionType__c</columns>
        <columns>iahelp__HelpTopic__c</columns>
        <columns>iahelp__HelpTopicId__c</columns>
        <columns>iahelp__HelpVoteOption__c</columns>
        <columns>iahelp__HelpVoteOptionId__c</columns>
        <columns>iahelp__HelpVoteSetId__c</columns>
        <columns>iahelp__HelpVoteSetName__c</columns>
        <columns>iahelp__HelpVoteSetQuestionText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__HelpInteractionType__c</field>
            <operation>equals</operation>
            <value>Vote</value>
        </filters>
        <label>Votes</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>